# axum_template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.runtime  README.md  deny.toml  docker-compose.yml  notes.md  task_plan.md
.sqlx/: query-00d4c224ff73573f23063a62c228b69c3fb9344ec7b395479d37be4c6116ed72.json  query-03a4852a882eedb9c96ca2a9a9a1163ed3d26f4e7e6d1c30acd12b8aabfa71b4.json  query-0e025b59952c7186e90d28a8fac392d782795ae6d4dd767079fbe0279d4bafcb.json  query-146f7a18b541f80739bfd781e52a789e3d271a63bdb6605c5f03b45e5aef8b76.json  query-154d757c13634589e6c32857397b40a5ae8b50447aa3e6e6df09247624c14c51.json  query-19fd7f5af464ba670a543e196b0198f7217d3005d7fd640b665dbf4281120f21.json  query-1b40d00c850d61c3c5f5dc46a3c2fb909d2d0419474458c6e2468e7e9ade5e3f.json  query-1b4b2f92b1bccb7a931d75a43bee73dcdc4f3c02619dc0fb21547ffbeb3eb09c.json  query-1cb0a1b779165ee70cc3d3bd00f4ea3d90781a2514790653da5e9ce5cf7d1065.json  query-21b02cfc7888094e7320ff885527579000c9bc1e4e6e4d02bf17777bdd8f324c.json  query-28a59cf763c7074f21a3a93d5e988af0b3c987b8afa6b52b68496095a01db56a.json  query-2ad472c500e4c4de32dce3ff5154ace77fe0eee610171a578f338de5deed1371.json  query-369f2e9a5665ccc5075477579870b0f5577bff1835d6dacdf767979c18bc16e2.json  query-374550edfa670806a1e8e82d74ea21688b49e2ab024a778fc9bb32bfd4196b54.json  query-37cd3e8c676a4a245c62a2335621d5b4a58a38fa250f650c0b6d6f0a9f50b648.json  (+37 more)
bins/server/: Cargo.toml
bins/server/src/: bootstrap.rs  main.rs
bins/worker/: Cargo.toml
bins/worker/src/: main.rs
config/: default.toml  development.toml  (+1 more)
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  openapi.rs  router.rs  state.rs
crates/api/src/auth/: jwt.rs  middleware.rs
crates/api/src/dtos/: address_dto.rs  admin_auth_dto.rs  admin_order_dto.rs  admin_runner_order_dto.rs  auth_dto.rs  cart_dto.rs  category_dto.rs  config_dto.rs  member_dto.rs  mod.rs  order_dto.rs  product_dto.rs  runner_order_dto.rs  store_dto.rs
crates/api/src/extractors/: auth_user.rs  ids.rs  mod.rs
crates/api/src/handlers/: address_handler.rs  admin_auth_handler.rs  admin_category_handler.rs  admin_order_handler.rs  admin_product_handler.rs  admin_runner_order_handler.rs  admin_store_handler.rs  auth_handler.rs  cart_handler.rs  category_handler.rs  config_handler.rs  health_handler.rs  member_handler.rs  mod.rs  order_handler.rs  product_handler.rs  runner_order_handler.rs  snapshot_handler.rs  store_handler.rs  user_handler.rs
crates/api/src/openapi/: admin.rs  mod.rs  public.rs  shared.rs
crates/api/src/routes/: address.rs  admin_auth.rs  admin_category.rs  admin_config.rs  admin_order.rs  admin_product.rs  admin_runner_order.rs  admin_store.rs  auth.rs  cart.rs  category.rs  config.rs  member.rs  mod.rs  order.rs  product.rs  runner_order.rs  snapshot.rs  store.rs  user.rs
crates/api/tests/: address_routes_test.rs  admin_auth_routes_test.rs  admin_catalog_routes_test.rs  auth_jwt_test.rs  auth_routes_test.rs  cart_routes_test.rs  category_routes_test.rs  config_routes_test.rs  order_runner_routes_test.rs  product_routes_test.rs  store_routes_test.rs  user_routes_test.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/dtos/: address_dto.rs  category_dto.rs  order_dto.rs  page_dto.rs  product_dto.rs  runner_order_dto.rs  store_dto.rs  user_dto.rs
crates/application/src/services/: address_service.rs  admin_service.rs  cart_service.rs  category_service.rs  order_service.rs  product_service.rs  runner_order_service.rs  store_service.rs  user_service.rs
crates/application/src/snapshot/: ingest_service.rs
crates/application/tests/: address_service_test.rs  admin_service_test.rs  cart_service_test.rs  category_service_test.rs  order_service_test.rs  product_service_test.rs  runner_order_service_test.rs  store_service_test.rs  user_service_test.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  lib.rs  response.rs
crates/domain/: Cargo.toml
crates/domain/src/: cache.rs  error.rs  lib.rs  transaction.rs
crates/domain/src/address/: entity.rs  repo.rs
crates/domain/src/admin/: entity.rs  mod.rs  repo.rs
crates/domain/src/auth/: mod.rs
crates/domain/src/cart/: entity.rs  mod.rs  repo.rs
crates/domain/src/category/: entity.rs  mod.rs  repo.rs
crates/domain/src/order/: entity.rs  mod.rs  repo.rs
crates/domain/src/product/: entity.rs  mod.rs  repo.rs
crates/domain/src/runner_order/: entity.rs  mod.rs  repo.rs
crates/domain/src/snapshot/: model.rs  ports.rs
crates/domain/src/store/: entity.rs  mod.rs  repo.rs
crates/domain/src/user/: entity.rs  mod.rs  repo.rs
crates/infra/: Cargo.toml
crates/infra/src/: config.rs  lib.rs
crates/infra/src/memory/: cache.rs
crates/infra/src/models/: address_model.rs  cart_model.rs  category_model.rs  goods_order_model.rs  store_model.rs  user_model.rs
crates/infra/src/postgres/: address_repo.rs  admin_repo.rs  cart_repo.rs  category_repo.rs  goods_order_repo.rs  product_repo.rs  runner_order_repo.rs  store_repo.rs  transaction.rs  user_repo.rs
crates/infra/src/redis/: cache.rs
crates/infra/src/snapshot/: mod.rs
crates/infra/src/snapshot/adapters/: common.rs  mod.rs  temu.rs  yandex.rs
crates/infra/src/snapshot/mq/: kafka_bus.rs  mod.rs  nats_bus.rs  noop_bus.rs
crates/infra/src/snapshot/storage/: mod.rs  s3_cold_store.rs  scylla_hot_store.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  lib.rs
crates/infrastructure/src/memory/: cache.rs
crates/infrastructure/src/models/: address_model.rs  admin_model.rs  cart_model.rs  category_model.rs  goods_order_model.rs  product_model.rs  runner_order_model.rs  store_model.rs  user_model.rs
crates/infrastructure/src/postgres/: address_repo.rs  admin_repo.rs  cart_repo.rs  category_repo.rs  goods_order_repo.rs  product_repo.rs  runner_order_repo.rs  store_repo.rs  transaction.rs  user_repo.rs
crates/infrastructure/src/redis/: cache.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bootstrap.rs  lib.rs  scheduler.rs
(+39 files in other folders)
