[workspace]
resolver = "2"
members = ["crates/*", "bins/*"]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BJD Team"]
license = "MIT"
repository = "https://github.com/bjd/bjd_backend"

[workspace.dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# ID Generation
ulid = { version = "1", features = ["serde"] }

# Configuration
config = "0.14"

# Async Trait
async-trait = "0.1"

# Password Hashing
bcrypt = "0.15"

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "ulid"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }

# Cache
fred = { version = "9", features = ["enable-rustls", "partial-tracing"] }

# Internal Crates
axum-common = { path = "crates/common" }
axum-domain = { path = "crates/domain" }
axum-application = { path = "crates/application" }
axum-infrastructure = { path = "crates/infrastructure" }
axum-api = { path = "crates/api" }


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"

[profile.release]
# lto = true          <-- 把这个很慢的优化改掉
lto = "thin" # 使用轻量级优化，或者直接 false
# codegen-units = 1   <-- 注释掉这行，让 rustc 并行编译 (默认 16)
opt-level = 2 # 默认是3
