[package]
name = "axum-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "axum-worker"
path = "src/main.rs"

[dependencies]
axum-infrastructure.workspace = true
axum-runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
anyhow.workspace = true
