[package]
name = "axum-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-core-kernel.workspace = true
axum-api-common.workspace = true
axum-domain.workspace = true
axum-application.workspace = true
axum.workspace = true
tower.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true

# test cicd

[dev-dependencies]
async-trait.workspace = true
