[package]
name = "axum-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-core-kernel.workspace = true
axum-domain.workspace = true
tracing.workspace = true
ulid.workspace = true
chrono.workspace = true
bcrypt.workspace = true
async-trait.workspace = true
rand.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
