[package]
name = "axum-common"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
ulid.workspace = true
utoipa.workspace = true
