[package]
name = "axum-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-core-kernel.workspace = true
thiserror.workspace = true
chrono.workspace = true
ulid.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
