[package]
name = "axum-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum-core-kernel.workspace = true
axum-infra-common.workspace = true
axum-domain.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
ulid.workspace = true
chrono.workspace = true
config.workspace = true
async-trait.workspace = true
fred.workspace = true
aws-config = "1.1"
aws-sdk-s3 = "1.20"
scylla = "0.12"
rdkafka = { version = "0.37", features = ["cmake-build"] }
async-nats = "0.34"
