[package]
name = "axum-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
axum-common.workspace = true
axum-domain.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
config.workspace = true
async-trait.workspace = true
