[package]
name = "axum-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
axum-core-kernel.workspace = true
axum-common-infra.workspace = true
axum-domain.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
ulid.workspace = true
chrono.workspace = true
config.workspace = true
async-trait.workspace = true
fred.workspace = true
